--- a/5css.css
+++ b/5css.css
@@ -297,3 +297,14 @@ max-width: 500px;
 margin: auto;
 padding: 20px;
 }
+
+
+body.dark-mode {
+    background-color: #121212;
+    color: white;
+}
+
+/* Ejemplo opcional para enlaces en modo oscuro */
+body.dark-mode a {
+    color: #90caf9;
+}
