--- a/5css.css
+++ b/5css.css
@@ -299,12 +299,13 @@ padding: 20px;
 }
 
 
+
 body.dark-mode {
     background-color: #121212;
     color: white;
 }
 
-/* Ejemplo opcional para enlaces en modo oscuro */
+/* Ejemplo opcional: enlaces en modo oscuro */
 body.dark-mode a {
     color: #90caf9;
 }
